# pektin-api

./: .dockerignore  .env  .gitlab-ci.yml  Cargo.toml  Dockerfile  dev.Dockerfile  test.json
jtd/: mod.rs  recordtype.jtd.json  recordtype.jtd.yml
openapi/: docker-compose.yml  pektin.yml
src/: auth.rs  config.rs  db.rs  dnssec.rs  errors-and-responses.rs  lib.rs  macros.rs  main.rs  opa-input.json  opa.rs  redis.rs  ribston.rs  signing-task.rs  test-json.rs  test-opa.rs  types.rs  utils.rs  validation.rs  vault.rs
src/methods/: delete.rs  get-zone-records.rs  get.rs  health.rs  search.rs  set.rs  sign.temp.rs
src/old/: policy.js  test.json
