[package]
edition = "2021"
name = "pektin-api"
version = "0.1.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "json"
path = "src/test-json.rs"

[lib]
name = "pektin_api"
path = "src/lib.rs"

[dependencies]
actix-web = "4.0.0-beta.9"
actix-cors = "0.6.0-beta.2"
anyhow = "1.0"
base64 = "0.13"
dotenv = "0.15"
mime = "0.3"
parking_lot = "0.11"
pektin-common = { git = "https://github.com/pektin-dns/pektin-common", branch = "main" }
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rust-crypto = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.14.0", features = ["full"] }
