[package]
edition = "2021"
name = "pektin-api"
version = "0.1.0"

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "pektin_api"
path = "src/lib.rs"

[dependencies]
actix-web = "4.0.0-rc.3"
actix-cors = "0.6.0-beta.10"
anyhow = "1.0"
chrono = "0.4"
data-encoding = "2.3"
env_logger = "0.9"
log = { version = "0.4", features = ["release_max_level_warn"] }
mime = "0.3"
p256 = { version = "0.10", features = ["pem"] }
parking_lot = "0.12"
pektin-common = { git = "https://github.com/pektin-dns/pektin-common", branch = "main" }
rand = "0.8"
ring = "0.16"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rust-crypto = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.17", features = ["full"] }
idna = "0.2.3"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "abort"
rpath = false