[package]
edition = "2021"
name = "pektin-api"
version = "0.1.0"

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "pektin_api"
path = "src/lib.rs"

[dependencies]
actix-web = "4.0.1"
actix-cors = "0.6.0"
anyhow = "1.0"
chrono = "0.4"
data-encoding = "2.3"
env_logger = "0.9"
idna = "0.2.3"
lazy_static = "1.4"
log = { version = "0.4", features = ["release_max_level_warn"] }
moka = "0.9.3"
mime = "0.3"
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio"] }
p256 = { version = "0.11", features = ["pem"] }
parking_lot = "0.12"
pektin-common = { git = "https://git.y.gy/pektin/pektin-common", branch = "main" }
rand = "0.8"
ring = "0.16"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rust-crypto = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.17", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.17"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
rpath = false
